--- a/sass/abstracts/js-classes.scss
+++ b/sass/abstracts/js-classes.scss
@@ -7,17 +7,46 @@
   z-index: 10;
 }
 
-.rotate .line1 {
-  transform: rotate(-45deg) translate(-1px, 4px);
-}
-.rotate .line2 {
-  display: none;
-}
-.rotate .line3 {
-  transform: rotate(45deg) translate(-1px, -4px);
-}
-
 .current {
   border: 5px solid #858585;
   transform: scale(1.1);
+}
+
+.settings__dark-mode--btn.dark {
+  color: lime;
+}
+
+.nav.dark {
+  background-color: #292929;
+}
+
+.settings.dark {
+  background-color: #292929;
+  color: white;
+}
+
+.input.dark {
+  background-color: #9c9c9c;
+  color: white;
+}
+
+.input.dark::placeholder {
+  color: white;
+}
+
+.input.dark:hover {
+  color: white;
+}
+
+.modal.open {
+  opacity: 1;
+  z-index: 15;
+}
+
+.close {
+  display: none;
+}
+
+.fontCurrent {
+  border-bottom: 2px solid #858585;
 }
