--- a/sass/abstracts/js-classes.scss
+++ b/sass/abstracts/js-classes.scss
@@ -47,6 +47,16 @@
   display: none;
 }
 
-.fontCurrent {
+.font-current {
   border-bottom: 2px solid #858585;
+}
+
+.f1 {
+  font-size: 3rem;
+}
+.f2 {
+  font-size: 3.6rem;
+}
+.f3 {
+  font-size: 4.2rem;
 }
