--- a/sass/components/settings.scss
+++ b/sass/components/settings.scss
@@ -140,15 +140,12 @@
 
     &--f1 {
       font-size: 3rem;
-      cursor: pointer;
     }
     &--f2 {
       font-size: 3.6rem;
-      cursor: pointer;
     }
     &--f3 {
       font-size: 4.2rem;
-      cursor: pointer;
     }
   }
 
@@ -171,8 +168,9 @@
 
     &--container {
       width: 6rem;
-      height: 2rem;
+      height: 3rem;
       display: flex;
+      justify-content: center;
       align-items: center;
       transition: 0.25s;
 
@@ -183,7 +181,7 @@
     }
 
     &--btn {
-      font-size: 1.8rem;
+      font-size: 2rem;
       background: none;
       border: none;
       width: 100%;
