--- a/sass/abstracts/js-classes.scss
+++ b/sass/abstracts/js-classes.scss
@@ -60,3 +60,27 @@
 .f3 {
   font-size: 4.2rem;
 }
+
+.saving-item {
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.saving-amount {
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+}
+
+#f1 {
+  font-size: 3rem;
+}
+
+#f2 {
+  font-size: 3.6rem;
+}
+
+#f3 {
+  font-size: 4.2rem;
+}
