--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -71,8 +71,8 @@
   &__settings-btn {
     font-size: 3.4rem;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    bottom: 1.5rem;
+    right: 1.5rem;
     text-shadow: 2px 2px 2px gray;
     color: white;
     cursor: pointer;
