--- a/sass/components/settings.scss
+++ b/sass/components/settings.scss
@@ -38,7 +38,7 @@
     }
 
     &--back {
-      font-size: 2rem;
+      font-size: 3rem;
       color: white;
       cursor: pointer;
     }
@@ -140,12 +140,15 @@
 
     &--f1 {
       font-size: 3rem;
+      cursor: pointer;
     }
     &--f2 {
       font-size: 3.6rem;
+      cursor: pointer;
     }
     &--f3 {
       font-size: 4.2rem;
+      cursor: pointer;
     }
   }
 
