--- a/sass/layout/display.scss
+++ b/sass/layout/display.scss
@@ -12,6 +12,7 @@
   z-index: -10;
 
   &__saving-item {
+    font-size: 3rem;
     font-weight: 500;
     letter-spacing: 0.2rem;
     text-transform: capitalize;
@@ -19,6 +20,7 @@
   }
 
   &__saving-amount {
+    font-size: 3rem;
     font-weight: 500;
     letter-spacing: 0.2rem;
   }
